WIP: better build system maybe

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,7 +12,14 @@
     <% } %>
     <% } %>
 </head>
+<body>
 
-<body></body>
+    <script>
+    //PLACEHOLDER_START
+    window.UNIPROT_DIFF_REPORT = null;
+    //PLACEHOLDER_END
+    </script>
+
+</body>
 
 </html>
