--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- See: https://github.com/rtaylorzfin/embedded-preact-report-template -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
