--- a/src/index.ejs
+++ b/src/index.ejs
@@ -43,7 +43,7 @@
 
     <script>
     //PLACEHOLDER_START
-    window.UNIPROT_DIFF_REPORT = null;
+    window.UNIPROT_DIFF_REPORT = JSON_GOES_HERE;
     //PLACEHOLDER_END
     </script>
 
